Added restart button and functionality

--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -33,6 +33,27 @@
 
 	<h1>Results</h1>
 	<h2 id="result-message"></h2>
+	<br>
+
+	<dir id="restart">
+
+
+	</dir>
+
+	<br>
+
+	<div id="audio">
+
+	</div>
+	<audio id="player" src="MusicTicTacToe.mp3"></audio>
+	<div id="audio">
+		<button onclick="document.getElementById('player').play()">Play</button>
+		<button onclick="document.getElementById('player').pause()">Pause</button>
+		<button onclick="document.getElementById('player').muted=!document.getElementById('player').muted">Mute/
+			Unmute</button>
+	</div>
+
+
 
 </body>
 
