--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="/faviconJC.png">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="ticTacStyle.css">
-	<script src="ticTac.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/ticTacStyle.css">
+	<script src="js/ticTac.js"></script>
 
 </head>
 
@@ -46,7 +46,7 @@
 	<br>
 
 	<div id='containAudioPlayer'>
-		<audio id="player" src="MusicTicTacToe.mp3"></audio>
+		<audio id="player" src="sound/MusicTicTacToe.mp3"></audio>
 		<div id="audio">
 			<button onclick="document.getElementById('player').play()">Play</button>
 			<button onclick="document.getElementById('player').pause()">Pause</button>
