--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 		}();
 	</script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LFBEG5BRP7"></script>
+	<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-LFBEG5BRP7"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 
 		gtag('config', 'G-LFBEG5BRP7');
-	</script>
+	</script> -->
 	<title>Tic Tac Toe</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="/faviconJC.png">
