--- a/index.html
+++ b/index.html
@@ -141,20 +141,55 @@
 						category: 'Video',
 						label: `${video.name()}`
 					});
-					var playAlertElem = document.createElement("div");
-					playAlertElem.style.padding = "20px";
-					playAlertElem.innerHTML = `You played the video! Its name is ${video.name()}.`;
-					document.body.appendChild(playAlertElem);
 					return video.unbind;
 				});
 
-				video.bind("secondchange", (s) => {
-					// maybe add some interactive goodness to the page?
+				video.bind("pause", function () {
+					analytics.track('Video Playback Paused', {
+						session_id: '12345',
+						content_asset_id: '0129370',
+						content_pod_id: 'segA',
+						ad_asset_id: null,
+						ad_pod_id: null,
+						ad_type: null,
+						position: 21,
+						total_length: 392,
+						video_player: 'wistia',
+						sound: 88,
+						bitrate: 100,
+						full_screen: false,
+						ad_enabled: false,
+						quality: 'hd1080',
+						category: 'Video',
+						label: `${video.name()}`
+					});
+
 				});
 
 				video.bind("end", () => {
 					// cellll-e-brate good times COME ON! 🎉
-					console.log("The video ended");
+					analytics.track('Video Content Completed', {
+						session_id: '12345',
+						asset_id: '0129370',
+						pod_id: 'segB',
+						title: 'Interview with Tony Robbins',
+						description: 'short description',
+						keywords: ['entrepreneurship', 'motivation'],
+						season: '2',
+						episode: '177',
+						genre: 'entrepreneurship',
+						program: 'Tim Ferris Show',
+						publisher: 'Tim Ferris',
+						position: 360,
+						total_length: 360,
+						channel: 'espn',
+						full_episode: true,
+						livestream: false,
+						airdate: '1991-08-13',
+						category: 'Video',
+						label: `${video.name()}`
+					});
+
 				});
 
 				// There are many other interesting events you can bind to: https://wistia.com/doc/player-api#events 
