add Restart button id

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h1 id="result-message"></h1>
 	<br>
 
-	<div id="restart"><button>Restart</button></div>
+	<div id="restart"><button id="restart-btn">Restart</button></div>
 	<br>
 
 	<div id='containAudioPlayer'>
