--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@
 	b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
 	s.parentNode.insertBefore(b, s);})(window.lintrk);
 	</script>
-	<noscript>
-	<img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=6532044&fmt=gif" />
-	</noscript>
+	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LFBEG5BRP7"></script>
+	<!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-LFBEG5BRP7"></script>
 	<script>
   	 window.dataLayer = window.dataLayer || [];
   	 function gtag(){dataLayer.push(arguments);}
   	 gtag('js', new Date());
 
   	 gtag('config', 'G-LFBEG5BRP7');
-	</script>
+	</script>-->
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -47,6 +45,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
 <body>
+	<noscript>
+	<img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=6532044&fmt=gif" />
+	</noscript>
 	<!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TL382XP"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
