--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 	</script>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-LFBEG5BRP7"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LFBEG5BRP7"></script>
 	<script>
   	 window.dataLayer = window.dataLayer || [];
   	 function gtag(){dataLayer.push(arguments);}
   	 gtag('js', new Date());
 
   	 gtag('config', 'G-LFBEG5BRP7');
-	</script>-->
+	</script>
+	
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
